# NoteSnip

./: README.md  deploy.sh
apps/: consowrap  query.sql  seeder.json
apps/Commands/: db_wipe  sqcr
apps/Migrations/: 2024-07-19_1721391466_down.sql  2024-07-19_1721391466_up.sql  2024-08-18_1723972598_up.sql  2024-08-27_1724757598_down.sql  2024-08-27_1724757598_up.sql
backend/: Cargo.toml  build.sh  docker-compose.yml  dockerfile  snippet_languages.json
backend/src/: db.rs  error.rs  hash.rs  main.rs  register.rs
backend/tests/: e2e_tests.rs
doc/: README.md
frontend/: font.css  index.html  package-lock.json  package.json
frontend/src/: App.tsx  Editor.tsx  MainPage.tsx  Providers.tsx  main.tsx
frontend/src/Button/: ButtonColorSchema.tsx  ButtonColorScheme.tsx  ColorModeButton.css  ColorModeButton.tsx  GithubButton.tsx  RegisterSubmit.tsx  SubmitButton.tsx
frontend/src/Code/: CodeProvider.tsx
frontend/src/Editor/: CodeEditorWrapper.tsx  CodeProvider.tsx  Editor.tsx
frontend/src/Footer/: Footer.tsx
frontend/src/Header/: Header.tsx
frontend/src/Languages/: DefaultSnippet.tsx  LanguageProvider.tsx  Languages.tsx  NativeItems.tsx
frontend/src/Modal/: ErrorResponseModal.tsx  LoadingModal.tsx  ResultModal.tsx  SubmitSettingModal.tsx
frontend/src/Pulldown/: Expiration.tsx  (+1 more)
testing_env/: README.md  compose.yaml
text-snippet-sharing-service/: Cargo.toml  snippet_languages.json
text-snippet-sharing-service/src/: db.rs  env.rs  hash.rs  hash_util.rs  json.rs  main.rs  register.rs  url.rs
text-snippet-sharing-service/tests/: e2e_tests.rs
(+23 files in other folders)
