[package]
name = "text-snippet-sharing-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.9.0"
blake3 = "1.5.3"
dotenv = "0.15.0"
hex = "0.4.3"
serde = { version = "1.0.208", features = ["derive"] }
sqlx = { version = "0.8.0", features = ["any", "postgres", "runtime-tokio-rustls", "macros"]}
tokio = { version = "1.39.3", features = ["full"] }
uuid = { version = "1.10.0", features = ["v4"] }
