[package]
name = "text-snippet-sharing-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.9.0"
dotenv = "0.15.0"
reqwest = { version = "0.12.5", features = ["json"]}
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
sqids = "0.4.1"
sqlx = { version = "0.8.0", features = ["any", "postgres", "runtime-tokio-rustls", "macros"]}
thiserror = "1.0.63"
tokio = { version = "1.39.3", features = ["full"] }
uuid = { version = "1.10.0", features = ["v4"] }
